package baseline;
/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Cristiam Enciso
 */

public class Solution42 {
    public static void main(String[] args) {
        // read the input from file
        // parse information
        // print output in tabular format
    }
}
