package baseline;
/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Cristiam Enciso
 */

import java.util.List;

public class WorkerList {
    // class to manage the workers in list

    // method to read list from file
    public List<String> readInput() {

    }

    // method to parse list
    public List<Worker> parseList(List<String> list) {

    }

    // method to print table
    public void printTable(List<Worker> list) {

    }

}
