@startuml
'https://plantuml.com/class-diagram

Solution42 o-- WorkerList : aggregation
WorkerList *-- Worker : composition

class Solution42 {
main()

}

class Worker {
-String firstName
-String lastName
-String Salary

+setFirstName()
+getFirstName()
+setLastName()
+getLastName()
+setSalary()
+getSalary()


}

class WorkerList {

+readList()
+parseList()
+printTable()

}

@enduml